--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -52,13 +52,11 @@ jobs:
         with:
           name: mooc
           path: ./mooc
+      - name: Install SSH key
+        run: |
+          install -m 600 -D /dev/null ~/.ssh/id_rsa
+          echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
+          ssh-keyscan -H ${{ secrets.SFTP_HOST }} > ~/.ssh/known_hosts
       - name: Upload
-        id: uploadStatic
-        uses: Creepios/sftp-action@v1.0.3
-        with:
-          host: ${{ secrets.SFTP_HOST }}
-          port: 22
-          username: ${{ secrets.SFTP_USER }}
-          password: ${{ secrets.SFTP_PASSWORD }}
-          localPath: './'
-          remotePath: './interactivedatascience.courses'
+        run: |
+          scp -r ./* ${{ secrets.SFTP_USER }}@${{ secrets.SFTP_HOST }}:./mooc.interactivedatascience.courses/
